tests/baselines/reference/decoratorMetadataGenericTypeVariable.errors.txt
decoratorMetadataGenericTypeVariable.ts(2,4): error TS2304: Cannot find name 'Decorate'.


==== decoratorMetadataGenericTypeVariable.ts (1 errors) ====
    export class C<TypeVariable> {
      @Decorate
       ~~~~~~~~
!!! error TS2304: Cannot find name 'Decorate'.
      member: TypeVariable;
    }
    